--- a/public/main.css
+++ b/public/main.css
@@ -935,61 +935,61 @@ html {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
-  width: 100%;
-}
-
 .\!container {
   width: 100% !important;
 }
 
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
+.container {
+  width: 100%;
+}
 
+@media (min-width: 640px) {
   .\!container {
     max-width: 640px !important;
+  }
+
+  .container {
+    max-width: 640px;
   }
 }
 
 @media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-
   .\!container {
     max-width: 768px !important;
+  }
+
+  .container {
+    max-width: 768px;
   }
 }
 
 @media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-
   .\!container {
     max-width: 1024px !important;
+  }
+
+  .container {
+    max-width: 1024px;
   }
 }
 
 @media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-
   .\!container {
     max-width: 1280px !important;
+  }
+
+  .container {
+    max-width: 1280px;
   }
 }
 
 @media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-
   .\!container {
     max-width: 1536px !important;
+  }
+
+  .container {
+    max-width: 1536px;
   }
 }
 
@@ -1638,6 +1638,14 @@ html {
   height: 100%;
 }
 
+.w-36 {
+  width: 9rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-auto {
   width: auto;
 }
@@ -1650,6 +1658,10 @@ html {
   max-width: 32rem;
 }
 
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1658,8 +1670,16 @@ html {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-2 {
@@ -1684,14 +1704,33 @@ html {
   border-radius: 0.375rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-borders {
   --tw-border-opacity: 1;
   border-color: rgb(217 217 217 / var(--tw-border-opacity));
 }
 
+.border-purple {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 60 255 / var(--tw-border-opacity));
+}
+
+.bg-greyLight {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
+}
+
 .bg-purple {
   --tw-bg-opacity: 1;
   background-color: rgb(99 60 255 / var(--tw-bg-opacity));
+}
+
+.bg-purpleLight {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 235 255 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1703,8 +1742,26 @@ html {
   padding: 2.5rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pl-10 {
@@ -1731,8 +1788,16 @@ html {
   font-size: 24px;
 }
 
+.text-hs {
+  font-size: 16px;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-grey {
@@ -1781,6 +1846,14 @@ html {
   caret-color: #633cff;
 }
 
+.header-links-btn svg path {
+  fill: currentColor;
+}
+
+.header-profile-btn svg path {
+  fill: currentColor;
+}
+
 .placeholder\:text-greyDark::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(51 51 51 / var(--tw-text-opacity));
@@ -1802,6 +1875,16 @@ html {
 .hover\:bg-purpleHover:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(190 173 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-purpleLight:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 235 255 / var(--tw-bg-opacity));
+}
+
+.hover\:text-purple:hover {
+  --tw-text-opacity: 1;
+  color: rgb(99 60 255 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-activeSelection:hover {
@@ -1836,10 +1919,20 @@ html {
   background-color: rgb(239 235 255 / var(--tw-bg-opacity));
 }
 
+@media not all and (min-width: 640px) {
+  .max-sm\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .sm\:hidden {
+    display: none;
   }
 
   .sm\:min-h-full {
