initial profile page w/image upload

--- a/public/main.css
+++ b/public/main.css
@@ -1672,6 +1672,10 @@ html {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.m-auto {
+  margin: auto;
+}
+
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
@@ -1680,6 +1684,11 @@ html {
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-10 {
@@ -1722,12 +1731,28 @@ html {
   margin-top: 2.25rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mb-40 {
+  margin-bottom: 10rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .block {
   display: block;
 }
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-10 {
@@ -1786,6 +1811,14 @@ html {
   width: 100%;
 }
 
+.w-48 {
+  width: 12rem;
+}
+
+.min-w-48 {
+  min-width: 12rem;
+}
+
 .max-w-lg {
   max-width: 32rem;
 }
@@ -1794,8 +1827,16 @@ html {
   max-width: 28rem;
 }
 
+.max-w-48 {
+  max-width: 12rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-col {
@@ -1824,6 +1865,10 @@ html {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]) {
@@ -2137,6 +2182,18 @@ html {
     width: 100%;
   }
 
+  .max-sm\:min-w-48 {
+    min-width: 12rem;
+  }
+
+  .max-sm\:max-w-48 {
+    max-width: 12rem;
+  }
+
+  .max-sm\:flex-col {
+    flex-direction: column;
+  }
+
   .max-sm\:gap-4 {
     gap: 1rem;
   }
@@ -2160,6 +2217,22 @@ html {
     min-height: 100%;
   }
 
+  .sm\:min-w-48 {
+    min-width: 12rem;
+  }
+
+  .sm\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
+  }
+
+  .sm\:items-center {
+    align-items: center;
+  }
+
   .sm\:justify-center {
     justify-content: center;
   }
@@ -2170,6 +2243,10 @@ html {
 
   .sm\:gap-4 {
     gap: 1rem;
+  }
+
+  .sm\:gap-5 {
+    gap: 1.25rem;
   }
 
   .sm\:self-end {
