--- a/src/main.css
+++ b/src/main.css
@@ -80,3 +80,7 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #333;
 }
+
+.link-input {
+  background: transparent url("./images/icon-link.svg") no-repeat 13px center;
+}
