--- a/public/main.css
+++ b/public/main.css
@@ -1203,19 +1203,6 @@ html {
   padding-bottom: 0.5rem;
 }
 
-.hero {
-  display: grid;
-  width: 100%;
-  place-items: center;
-  background-size: cover;
-  background-position: center;
-}
-
-.hero > * {
-  grid-column-start: 1;
-  grid-row-start: 1;
-}
-
 .input {
   flex-shrink: 1;
   -webkit-appearance: none;
@@ -1347,42 +1334,8 @@ html {
   background-repeat: no-repeat;
 }
 
-.\!select {
-  display: inline-flex !important;
-  cursor: pointer !important;
-  -webkit-user-select: none !important;
-     -moz-user-select: none !important;
-          user-select: none !important;
-  -webkit-appearance: none !important;
-     -moz-appearance: none !important;
-          appearance: none !important;
-  height: 3rem !important;
-  min-height: 3rem !important;
-  padding-left: 1rem !important;
-  padding-right: 2.5rem !important;
-  font-size: 0.875rem !important;
-  line-height: 1.25rem !important;
-  line-height: 2 !important;
-  border-radius: var(--rounded-btn, 0.5rem) !important;
-  border-width: 1px !important;
-  border-color: transparent !important;
-  --tw-bg-opacity: 1 !important;
-  background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity))) !important;
-  background-image: linear-gradient(45deg, transparent 50%, currentColor 50%),
-    linear-gradient(135deg, currentColor 50%, transparent 50%) !important;
-  background-position: calc(100% - 20px) calc(1px + 50%),
-    calc(100% - 16.1px) calc(1px + 50%) !important;
-  background-size: 4px 4px,
-    4px 4px !important;
-  background-repeat: no-repeat !important;
-}
-
 .select[multiple] {
   height: auto;
-}
-
-.\!select[multiple] {
-  height: auto !important;
 }
 
 .steps .step {
@@ -1804,15 +1757,6 @@ html {
   outline-color: var(--fallback-bc,oklch(var(--bc)/0.2));
 }
 
-.\!select:focus {
-  box-shadow: none !important;
-  border-color: var(--fallback-bc,oklch(var(--bc)/0.2)) !important;
-  outline-style: solid !important;
-  outline-width: 2px !important;
-  outline-offset: 2px !important;
-  outline-color: var(--fallback-bc,oklch(var(--bc)/0.2)) !important;
-}
-
 .select-disabled,
   .select:disabled,
   .select[disabled] {
@@ -1823,18 +1767,6 @@ html {
   background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
   color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
   --tw-text-opacity: 0.2;
-}
-
-
-  .\!select:disabled,
-  .\!select[disabled] {
-  cursor: not-allowed !important;
-  --tw-border-opacity: 1 !important;
-  border-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-border-opacity))) !important;
-  --tw-bg-opacity: 1 !important;
-  background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity))) !important;
-  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity))) !important;
-  --tw-text-opacity: 0.2 !important;
 }
 
 .select-disabled::-moz-placeholder, .select:disabled::-moz-placeholder, .select[disabled]::-moz-placeholder {
@@ -1849,18 +1781,6 @@ html {
   --tw-placeholder-opacity: 0.2;
 }
 
-.\!select:disabled::-moz-placeholder, .\!select[disabled]::-moz-placeholder {
-  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity))) !important;
-  --tw-placeholder-opacity: 0.2 !important;
-}
-
-
-  .\!select:disabled::placeholder,
-  .\!select[disabled]::placeholder {
-  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-placeholder-opacity))) !important;
-  --tw-placeholder-opacity: 0.2 !important;
-}
-
 .select-multiple,
   .select[multiple],
   .select[size].select:not([size="1"]) {
@@ -1868,21 +1788,9 @@ html {
   padding-right: 1rem;
 }
 
-
-  .\!select[multiple],
-  .\!select[size].\!select:not([size="1"]) {
-  background-image: none !important;
-  padding-right: 1rem !important;
-}
-
 [dir="rtl"] .select {
   background-position: calc(0% + 12px) calc(1px + 50%),
     calc(0% + 16px) calc(1px + 50%);
-}
-
-[dir="rtl"] .\!select {
-  background-position: calc(0% + 12px) calc(1px + 50%),
-    calc(0% + 16px) calc(1px + 50%) !important;
 }
 
 @keyframes skeleton {
@@ -2410,6 +2318,10 @@ html {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -2456,20 +2368,16 @@ html {
   border-radius: 0.375rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .border {
   border-width: 1px;
 }
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-borders {
@@ -2532,10 +2440,6 @@ html {
   padding: 1.25rem;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -2556,8 +2460,17 @@ html {
   padding-bottom: 1.5rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pl-10 {
   padding-left: 2.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .text-center {
@@ -2730,6 +2643,10 @@ html {
 
 .link-input {
   background: transparent url("./images/icon-link.svg") no-repeat 13px center;
+}
+
+.colored-icon {
+  filter: brightness(0) invert(1);
 }
 
 .placeholder\:text-greyDark::-moz-placeholder {
